fixed addworkout form from overflowing

--- a/src/Components/AddWorkout/addworkout.css
+++ b/src/Components/AddWorkout/addworkout.css
@@ -1,7 +1,3 @@
-.addworkout-container{
-    height: 100vh;
-}
-
 form{
     display: flex;
     justify-content: center;
